--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
          <div class="wrapper" >
          <div class="container"> 
             <h1 class="title">Refleksjonsnotat</h1>
-            <section class="concept-and-background"> </section>
+            <section class="concept-and-background"> 
                 <h2 class= "concept-and-background__title">concept and background</h2>     
-         <p class=" concept and background_text"> This idea is based on my previous experience working as a barista before and during my time in college. The poster illustrates a step-by-step process for espresso tamping, which is a crucial factor in achieving high-quality espresso. It affects the flow of water and the extraction of espresso oils from the ground coffee beans. The poster presents three (four) key steps I used to follow to achieve optimal espresso quality.</p>
+                <p class=" concept and background__text"> This idea is based on my previous experience working as a barista before and during my time in college. The poster illustrates a step-by-step process for espresso tamping, which is a crucial factor in achieving high-quality espresso. It affects the flow of water and the extraction of espresso oils from the ground coffee beans. The poster presents three (four) key steps I used to follow to achieve optimal espresso quality.</p>
+            </section>
         </div>    
     </div>
 </body>
