Начал вторую секцию

--- a/index.html
+++ b/index.html
@@ -13,8 +13,41 @@
             <h1 class="title">Refleksjonsnotat</h1>
             <section class="concept-and-background"> 
                 <h2 class= "concept-and-background__title">concept and background</h2>     
-                <p class=" concept and background__text"> This idea is based on my previous experience working as a barista before and during my time in college. The poster illustrates a step-by-step process for espresso tamping, which is a crucial factor in achieving high-quality espresso. It affects the flow of water and the extraction of espresso oils from the ground coffee beans. The poster presents three (four) key steps I used to follow to achieve optimal espresso quality.</p>
-            </section>
+                <p class="concept-and-background__text"> This idea is based on my previous experience working as a barista before and during my time in college. The poster illustrates a step-by-step process for espresso tamping, which is a crucial factor in achieving high-quality espresso. It affects the flow of water and the extraction of espresso oils from the ground coffee beans. The poster presents three (four) key steps I used to follow to achieve optimal espresso quality.</p>
+            </section> 
+            <section class= "typography-og-color-palette">
+                <h2 class="typography-og-color-palette__title"> Typography og Color palette</h2> 
+                <div class= "typography-og-color-palette__fonts"> 
+                    <div class="typography-og-color-palette__font_oleo">Oleo Script Swash Caps</div>
+                    <div class="typography-og-color-palette__font_inconsolata">inconsolata</div>
+                </div>
+                <p class="typography-og-color-palette__text">When it comes to typography, Oleo Script Swash Caps is chosen for the title to encapsulate an authentic cafe vibe and create a welcoming and cozy atmosphere. This decorative element helps position the title at the top of the visual hierarchy and guides the reader's attention on the poster. Inconsolata is used for the steps to ensure a clear and easily readable presentation. This sans-serif font adds a subtle retro touch that seamlessly complements the cartoon-like style of the poster, creating a visual contrast that highlights both the title and the steps.</p>
+                    <div class="typography-og-color-palette__color"> 
+                    <div class="color__circle color__circle_crayola"></div>
+                    <div class="color__hex">#EABE93</div>
+                    <div class="colot_name">“Crayola”</div>
+                </div>
+                <div class="typography-og-color-palette__color"> 
+                    <div class="color__circle color__circle_crayola"></div>
+                    <div class="color__hex">#3C251A3</div>
+                    <div class="colot_name">“Bistre”
+                </div> 
+                <div class="typography-og-color-palette__color"> 
+                    <div class="color__circle color__circle_crayola"></div>
+                    <div class="color__hex">##4C684A</div>
+                    <div class="colot_name">“Feldgrau”     
+                 </div>
+                 <div class="typography-og-color-palette__color"> 
+                    <div class="color__circle color__circle_crayola"></div>
+                    <div class="color__hex">#BABABA</div>
+                    <div class="colot_name">“Gray X11”     
+                </div> 
+                <div class="typography-og-color-palette__color"> 
+                    <div class="color__circle color__circle_crayola"></div>
+                    <div class="color__hex">#A38167</div>
+                    <div class="colot_name">“Beaver”
+                </div>
+            </section> 
         </div>    
     </div>
 </body>
