--- a/index.html
+++ b/index.html
@@ -19,35 +19,48 @@
                 <h2 class="typography-og-color-palette__title"> Typography og Color palette</h2> 
                 <div class= "typography-og-color-palette__fonts"> 
                     <div class="typography-og-color-palette__font_oleo">Oleo Script Swash Caps</div>
-                    <div class="typography-og-color-palette__font_inconsolata">inconsolata</div>
+                    <div class="typography-og-color-palette__font_inconsolata">Inconsolata</div>
                 </div>
                 <p class="typography-og-color-palette__text">When it comes to typography, Oleo Script Swash Caps is chosen for the title to encapsulate an authentic cafe vibe and create a welcoming and cozy atmosphere. This decorative element helps position the title at the top of the visual hierarchy and guides the reader's attention on the poster. Inconsolata is used for the steps to ensure a clear and easily readable presentation. This sans-serif font adds a subtle retro touch that seamlessly complements the cartoon-like style of the poster, creating a visual contrast that highlights both the title and the steps.</p>
-                    <div class="typography-og-color-palette__color"> 
-                    <div class="color__circle color__circle_crayola"></div>
-                    <div class="color__hex">#EABE93</div>
-                    <div class="colot_name">“Crayola”</div>
-                </div>
-                <div class="typography-og-color-palette__color"> 
-                    <div class="color__circle color__circle_crayola"></div>
-                    <div class="color__hex">#3C251A3</div>
-                    <div class="colot_name">“Bistre”
+                <div class="typography-og-color-palette__colors">
+                    <div class="typography-og-color-palette__color color"> 
+                        <div class="color__circle color__circle_crayola"></div>
+                        <div class="color__hex">#EABE93</div>
+                        <div class="color__name">“Crayola”</div>
+                    </div>
+                    <div class="typography-og-color-palette__color color"> 
+                        <div class="color__circle color__circle_bistre"></div>
+                        <div class="color__hex">#3C251A3</div>
+                        <div class="color__name">“Bistre”</div> 
+                    </div>
+                    <div class="typography-og-color-palette__color color"> 
+                        <div class="color__circle color__circle_feldgrau"></div>
+                        <div class="color__hex">#4C684A</div>
+                        <div class="color__name">“Feldgrau”</div>
+                    </div>
+                    <div class="typography-og-color-palette__color color"> 
+                        <div class="color__circle color__circle_gray-x-11"></div>
+                        <div class="color__hex">#BABABA</div>
+                        <div class="color__name">“Gray X11”</div> 
+                    </div>
+                    <div class="typography-og-color-palette__color color"> 
+                        <div class="color__circle color__circle_beaver"></div>
+                        <div class="color__hex">#A38167</div>
+                        <div class="color__name">“Beaver”</div>
+                    </div>
                 </div> 
-                <div class="typography-og-color-palette__color"> 
-                    <div class="color__circle color__circle_crayola"></div>
-                    <div class="color__hex">##4C684A</div>
-                    <div class="colot_name">“Feldgrau”     
-                 </div>
-                 <div class="typography-og-color-palette__color"> 
-                    <div class="color__circle color__circle_crayola"></div>
-                    <div class="color__hex">#BABABA</div>
-                    <div class="colot_name">“Gray X11”     
-                </div> 
-                <div class="typography-og-color-palette__color"> 
-                    <div class="color__circle color__circle_crayola"></div>
-                    <div class="color__hex">#A38167</div>
-                    <div class="colot_name">“Beaver”
-                </div>
+                <p class="typography-og-color-palette__text"> The color palette is carefully chosen to align with the coffee concept. The warm browns and beiges represent coffee beans and delightful coffee beverages, while the plant-like green symbolizes the natural origin of coffee beans in nature. Additionally, the light gray in the palette, akin to the silver often found on espresso machine portafilters, strengthens the connection to espresso-making and conveys authenticity. These colors together create a visual narrative that unites the world of coffee, from the natural origin of coffee beans to the essential equipment used in the process.</p> 
             </section> 
+            <section claas="figures-and-forms">
+            <h2 class="figures-and-forms__title">Figures and forms</h2>
+            <p class="figures-and-forms__text"> The poster and its elements are vector-based and created in Figma. The shapes represent real objects used in the process, including decorative elements like leaves and coffee beans used as substitutes for the letter "o" in the title. The arrows, in a contrasting green, are also designed in Figma to complement the natural green tone in the color palette. The equipment-representing shapes are somewhat simplified to maintain the cartoon-like style characteristic of the poster's concept. No shapes are credited as they are created by me in Figma, drawing inspiration from real objects.</p>
+            </section>
+            <section class="Design principles"> 
+            <h2 class="design-principle__title">Design principles</h2>
+            <p class="design-principle__text">The poster's design carefully incorporates fundamental design principles to achieve a meaningful visual outcome. This includes emphasizing visual hierarchy to clearly convey the importance of information, employing Gestalt principles (alignment) for proper arrangement and organization, and maintaining consistency through the repetition of elements. Furthermore, the choice of typography and color palette is thoughtfully considered to create contrast among the poster's elements while aligning with its context and content.  
+                These design principles guide the user through the poster's information structure while contributing to an aesthetically pleasing appearance that reflects the poster's content and structure. The result is a well-balanced presentation that both informs and engages the readers.</p>
+            </section>
+        
         </div>    
     </div>
 </body>
