--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <p class="figures-and-forms__text"> The poster and its elements are vector-based and created in Figma. The shapes represent real objects used in the process, including decorative elements like leaves and coffee beans used as substitutes for the letter "o" in the title. The arrows, in a contrasting green, are also designed in Figma to complement the natural green tone in the color palette. The equipment-representing shapes are somewhat simplified to maintain the cartoon-like style characteristic of the poster's concept. No shapes are credited as they are created by me in Figma, drawing inspiration from real objects.</p>
             </section>
             <section class="Design principles"> 
-            <h2 class="design-principle__title">Design principles</h2>
-            <p class="design-principle__text">The poster's design carefully incorporates fundamental design principles to achieve a meaningful visual outcome. This includes emphasizing visual hierarchy to clearly convey the importance of information, employing Gestalt principles (alignment) for proper arrangement and organization, and maintaining consistency through the repetition of elements. Furthermore, the choice of typography and color palette is thoughtfully considered to create contrast among the poster's elements while aligning with its context and content.  
-                These design principles guide the user through the poster's information structure while contributing to an aesthetically pleasing appearance that reflects the poster's content and structure. The result is a well-balanced presentation that both informs and engages the readers.</p>
+            <h2 class="design-principles__title">Design principles</h2>
+            <p class="design-principles__text">The poster's design carefully incorporates fundamental design principles to achieve a meaningful visual outcome. This includes emphasizing visual hierarchy to clearly convey the importance of information, employing Gestalt principles (alignment) for proper arrangement and organization, and maintaining consistency through the repetition of elements. Furthermore, the choice of typography and color palette is thoughtfully considered to create contrast among the poster's elements while aligning with its context and content.  
+            <br> <br> These design principles guide the user through the poster's information structure while contributing to an aesthetically pleasing appearance that reflects the poster's content and structure. The result is a well-balanced presentation that both informs and engages the readers.</p>
             </section>
-        
+            <div class="border"></div>
         </div>    
     </div>
 </body>
